Archive2/92/0d0abb250bda28/output
main.cpp:3:24: error: expected unqualified-id before '=' token
     virtual ~Base() {} = 0;
                        ^
